--- a/style.css
+++ b/style.css
@@ -1,15 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap');
+
 * {
     box-sizing: border-box;
 }
-
-.header {
+body {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    background-color: antiquewhite;
+}
+.header {
+    width: 90vw;
+    height: 70px;
+    background-color: rgb(27, 25, 58);
+    display: flex;
+    margin: 0;
+    box-shadow: 2px 2px 15px black;
 }
 
 .main {
-    background: url(tree.jpg);
+    width: 90vw;
+    height: 175vh;
+    border: 1px solid black;
+    background-color: white;
+    border-top: 0;
+    border-bottom: 0;
+    box-shadow: 2px 2px 15px black;
+}
+
+.beginning {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Nunito',sans-serif;
+    color: rgb(92, 66, 66);
+
 }
 
 .footer {
+    width: 90vw;
+    height: 70px;
+    background-color: rgb(27, 25, 58);
     display: flex;
+    margin: 0;
+    display: flex;
+    box-shadow: 2px 2px 15px black;
 }
